--- a/package.json
+++ b/package.json
@@ -7,19 +7,14 @@
   "repository": "https://github.com/antoniandre/splitpanes",
   "license": "MIT",
   "funding": "https://github.com/sponsors/antoniandre",
-  "main": "./dist/splitpanes.es.js",
-  "unpkg": "dist/splitpanes.umd.js",
-  "jsdelivr": "dist/splitpanes.umd.js",
-  "module": "./dist/splitpanes.es.js",
+  "main": "./dist/splitpanes.js",
+  "module": "./dist/splitpanes.js",
+  "types": "./dist/splitpanes.d.ts",
   "files": [
-    "dist",
-    "src/components/splitpanes"
+    "dist"
   ],
   "exports": {
-    ".": {
-      "import": "./dist/splitpanes.es.js",
-      "require": "./dist/splitpanes.umd.js"
-    },
+    ".": "./dist/splitpanes.js",
     "./package.json": "./package.json",
     "./dist/*": "./dist/*"
   },
@@ -53,16 +48,25 @@
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "pug": "^3.0.3",
     "rollup-plugin-delete": "^3.0.0",
     "sass": "^1.85.1",
     "simple-syntax-highlighter": "^3.1.1",
+    "typescript": "^5.8.3",
     "vite": "^6.2.0",
+    "vite-plugin-dts": "^4.5.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "wave-ui": "^3.19.0"
   },
   "peerDependencies": {
     "vue": "^3.2.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild"
+    ]
   }
 }
